# PGR

./: .gitignore  CMakeLists.txt  README.md  default_scene.txt  run.sh  sample_scene.txt
src/: image.cpp  image.h  input_format.cpp  main.cpp  plane.cpp  quadric.cpp  quadric.h  scene.cpp  scene.h  scene_base.cpp  scene_base.h  triangle.cpp
